--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Sakthi Silks </title>
+<title>Shakthi Silks </title>
 <meta name="description" content="description">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Favicon -->
@@ -53,7 +53,7 @@
             	<!--Desktop Logo-->
                 <div class="logo col-md-2 col-lg-2 d-none d-lg-block">
                     <a href="index.html">
-                    	<img src="assets/images/ss-logo.png" alt="Sakthi Silks" title="Sakthi Silks" />
+                    	<img src="assets/images/ss-logo.png" alt="Shakthi Silks" title="Shakthi Silks" />
                     </a>
                 </div>
                 <!--End Desktop Logo-->
@@ -102,7 +102,7 @@
                 <div class="col-6 col-sm-6 col-md-6 col-lg-2 d-block d-lg-none mobile-logo">
                 	<div class="logo">
                         <a href="index.html">
-                            <img src="assets/images/ss-logo.png" alt="Sakthi Silks" title="Sakthi Silks" />
+                            <img src="assets/images/ss-logo.png" alt="Shakthi Silks" title="Shakthi Silks" />
                         </a>                         
                     </div>                    
                 </div>               
@@ -215,7 +215,7 @@
         	<div class="row">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 main-col">
                 	<div class="text-center mb-4">
-                        <h2 class="h2">About Sakthi Silks</h2>
+                        <h2 class="h2">About Shakthi Silks</h2>
                         <div class="rte-setting">
                             <p><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</strong></p>
                             <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
@@ -248,7 +248,7 @@
                 	<div class="row">
                     	<div class="col-12 col-sm-3 col-md-3 col-lg-3  footer-links">
                         	<img src="assets/images/ss-logo.png">
-                          <p>Sakthi Silks & Sarees is excited to introduce its newest silk sarees online shop. Our shop is uniquely constructed for our valuable customers.</p>
+                          <p>Shakthi Silks & Sarees is excited to introduce its newest silk sarees online shop. Our shop is uniquely constructed for our valuable customers.</p>
                           
                             <div class="footer-social">
                                 <ul class="list--inline site-footer__social-icons social-icons">
@@ -284,7 +284,7 @@
                             <ul class="addressFooter">
                             	<li><i class="icon anm anm-map-marker-al"></i><p>Shakthi Sillk Route, B Block Unity Buildings, JC Road, Bangalore - 2 </p></li>
                                 <li class="phone"><i class="icon anm anm-phone-r"></i><p>41142067  |  41245024  |  9845095415</p></li>
-                                <li class="email"><i class="icon anm anm-envelope-l"></i><p>sales@sakthisilks.com</p></li>
+                                <li class="email"><i class="icon anm anm-envelope-l"></i><p>sales@Shakthisilks.com</p></li>
                             </ul>
                         </div>
                     </div>
@@ -294,7 +294,7 @@
                 <div class="footer-bottom">
                 	<div class="row">
                     	<!--Footer Copyright-->
-	                	<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1 order-md-0 order-lg-0 order-sm-1 copyright text-sm-center text-md-left text-lg-left"><p>Copyright 2021&copy; Sakthi Silks</p></div>
+	                	<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1 order-md-0 order-lg-0 order-sm-1 copyright text-sm-center text-md-left text-lg-left"><p>Copyright 2021&copy; Shakthi Silks</p></div>
                         <!--End Footer Copyright-->
                         <!--Footer Payment Icon-->
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6 order-0 order-md-1 order-lg-1 order-sm-0 payment-icons text-right text-md-center">
@@ -344,7 +344,7 @@
                                     </span>
                                 </p>
                                 <div class="product-single__description rte">
-                                    Sakthi Silks that will give you  a smooth shopping experience which can be used for various kinds of Sarees such as fashion,...
+                                    Shakthi Silks that will give you  a smooth shopping experience which can be used for various kinds of Sarees such as fashion,...
                                 </div>
                                 
                             <form method="post" action="#" id="product_form_10508262282" accept-charset="UTF-8" class="product-form product-form-product-template hidedropdown" enctype="multipart/form-data">
