--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Sakthi Silks </title>
+<title>Shakthi Silks </title>
 <meta name="description" content="description">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Favicon -->
@@ -53,7 +53,7 @@
             	<!--Desktop Logo-->
                 <div class="logo col-md-2 col-lg-2 d-none d-lg-block">
                     <a href="index.html">
-                    	<img src="assets/images/ss-logo.png" alt="Sakthi Silks" title="Sakthi Silks" />
+                    	<img src="assets/images/ss-logo.png" alt="Shakthi Silks" title="Shakthi Silks" />
                     </a>
                 </div>
                 <!--End Desktop Logo-->
@@ -102,7 +102,7 @@
                 <div class="col-6 col-sm-6 col-md-6 col-lg-2 d-block d-lg-none mobile-logo">
                 	<div class="logo">
                         <a href="index.html">
-                            <img src="assets/images/ss-logo.png" alt="Sakthi Silks" title="Sakthi Silks" />
+                            <img src="assets/images/ss-logo.png" alt="Shakthi Silks" title="Shakthi Silks" />
                         </a>                         
                     </div>                    
                 </div>               
@@ -289,7 +289,7 @@
                     <ul class="policy">
                         <li><i class="icon anm anm-map-marker-al"></i>  Shakthi Sillk Route, B Block Unity Buildings, JC Road, Bangalore - 2</li>
                         <li><i class="icon anm anm-phone-s"></i>  41142067 | 41245024 | 9845095415</li>
-                        <li><i class="icon anm anm-envelope-l"></i>  sales@sakthisilks.com</li>
+                        <li><i class="icon anm anm-envelope-l"></i>  sales@Shakthisilks.com</li>
                     </ul>
                     <hr />
                     <ul class="list--inline site-footer__social-icons social-icons">
@@ -314,7 +314,7 @@
                 	<div class="row">
                     	<div class="col-12 col-sm-3 col-md-3 col-lg-3  footer-links">
                         	<img src="assets/images/ss-logo.png">
-                          <p>Sakthi Silks & Sarees is excited to introduce its newest silk sarees online shop. Our shop is uniquely constructed for our valuable customers.</p>
+                          <p>Shakthi Silks & Sarees is excited to introduce its newest silk sarees online shop. Our shop is uniquely constructed for our valuable customers.</p>
                           
                             <div class="footer-social">
                                 <ul class="list--inline site-footer__social-icons social-icons">
@@ -348,7 +348,7 @@
                             <ul class="addressFooter">
                             	<li><i class="icon anm anm-map-marker-al"></i><p>Shakthi Sillk Route, B Block Unity Buildings, JC Road, Bangalore - 2 </p></li>
                                 <li class="phone"><i class="icon anm anm-phone-r"></i><p>41142067  |  41245024  |  9845095415</p></li>
-                                <li class="email"><i class="icon anm anm-envelope-l"></i><p>sales@sakthisilks.com</p></li>
+                                <li class="email"><i class="icon anm anm-envelope-l"></i><p>sales@Shakthisilks.com</p></li>
                             </ul>
                         </div>
                     </div>
@@ -358,7 +358,7 @@
                 <div class="footer-bottom">
                 	<div class="row">
                     	<!--Footer Copyright-->
-	                	<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1 order-md-0 order-lg-0 order-sm-1 copyright text-sm-center text-md-left text-lg-left"><p>Copyright 2021&copy; Sakthi Silks</p></div>
+	                	<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1 order-md-0 order-lg-0 order-sm-1 copyright text-sm-center text-md-left text-lg-left"><p>Copyright 2021&copy; Shakthi Silks</p></div>
                         <!--End Footer Copyright-->
                         <!--Footer Payment Icon-->
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6 order-0 order-md-1 order-lg-1 order-sm-0 payment-icons text-right text-md-center">
