--- a/product.html
+++ b/product.html
@@ -17,11 +17,16 @@
 <link rel="stylesheet" href="assets/css/responsive.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
+<script src="https://danamojo.org/dm/js/widget.js" type="text/javascript"></script>
+
 </head>
+
 <body>
-<div id="pre-loader">
+<!-- <div id="pre-loader">
     <img src="assets/images/loader.gif" alt="Loading..." />
-</div>
+</div> -->
+
+
 <div class="pageWrapper">	
     <!--Top Header-->
     <div class="top-header">
@@ -203,6 +208,8 @@
 	<!--End Mobile Menu-->
         
     <!--Body Content-->
+
+   
     <div id="page-content">
     	<!--Collection Banner-->
     	<div class="collection-header">
@@ -1552,6 +1559,7 @@
      <script src="assets/js/popper.min.js"></script>
      <script src="assets/js/lazysizes.js"></script>
      <script src="assets/js/main.js"></script>
+     <script src="assets/js/danamojo.js"></script>
 </div>
 </body>
 
